--- a/lerobot/configs/robot/koch.yaml
+++ b/lerobot/configs/robot/koch.yaml
@@ -10,28 +10,28 @@ max_relative_target: null
 leader_arms:
   main:
     _target_: lerobot.common.robot_devices.motors.dynamixel.DynamixelMotorsBus
-    port: /dev/tty.usbmodem575E0031751
+    port: /dev/ttyACM1 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
     motors:
       # name: (index, model)
-      shoulder_pan: [1, "xl330-m077"]
-      shoulder_lift: [2, "xl330-m077"]
-      elbow_flex: [3, "xl330-m077"]
-      wrist_flex: [4, "xl330-m077"]
-      wrist_roll: [5, "xl330-m077"]
-      gripper: [6, "xl330-m077"]
+      shoulder_pan: [0, "xl330-m077"]
+      shoulder_lift: [1, "xl330-m077"]
+      elbow_flex: [2, "xl330-m077"]
+      wrist_flex: [3, "xl330-m077"]
+      wrist_roll: [4, "xl330-m077"]
+      gripper: [5, "xl330-m077"]
 
 follower_arms:
   main:
     _target_: lerobot.common.robot_devices.motors.dynamixel.DynamixelMotorsBus
-    port: /dev/tty.usbmodem575E0032081
+    port: /dev/ttyACM0 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
     motors:
       # name: (index, model)
-      shoulder_pan: [1, "xl430-w250"]
-      shoulder_lift: [2, "xl430-w250"]
-      elbow_flex: [3, "xl330-m288"]
-      wrist_flex: [4, "xl330-m288"]
-      wrist_roll: [5, "xl330-m288"]
-      gripper: [6, "xl330-m288"]
+      shoulder_pan: [0, "xl430-w250"]
+      shoulder_lift: [1, "xl430-w250"]
+      elbow_flex: [2, "xl330-m288"]
+      wrist_flex: [3, "xl330-m288"]
+      wrist_roll: [4, "xl330-m288"]
+      gripper: [5, "xl330-m288"]
 
 cameras:
   laptop:
