--- a/lerobot/configs/robot/koch.yaml
+++ b/lerobot/configs/robot/koch.yaml
@@ -10,7 +10,7 @@ max_relative_target: null
 leader_arms:
   main:
     _target_: lerobot.common.robot_devices.motors.dynamixel.DynamixelMotorsBus
-    port: /dev/ttyACM1 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
+    port: /dev/ttyACM0 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
     motors:
       # name: (index, model)
       shoulder_pan: [0, "xl330-m077"]
@@ -23,7 +23,7 @@ leader_arms:
 follower_arms:
   main:
     _target_: lerobot.common.robot_devices.motors.dynamixel.DynamixelMotorsBus
-    port: /dev/ttyACM0 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
+    port: /dev/ttyACM1 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
     motors:
       # name: (index, model)
       shoulder_pan: [0, "xl430-w250"]
@@ -34,15 +34,15 @@ follower_arms:
       gripper: [5, "xl330-m288"]
 
 cameras:
-  laptop:
-    _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
-    camera_index: 0
-    fps: 30
-    width: 640
-    height: 480
+  # laptop:
+  #   _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
+  #   camera_index: 0
+  #   fps: 30
+  #   width: 640
+  #   height: 480
   phone:
     _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
-    camera_index: 1
+    camera_index: 2
     fps: 30
     width: 640
     height: 480
