--- a/lerobot/configs/robot/koch.yaml
+++ b/lerobot/configs/robot/koch.yaml
@@ -34,15 +34,21 @@ follower_arms:
       gripper: [5, "xl330-m288"]
 
 cameras:
-  # laptop:
+  # android:
   #   _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
-  #   camera_index: 0
+  #   camera_index: 
   #   fps: 30
   #   width: 640
   #   height: 480
   phone:
     _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
     camera_index: 2
+    fps: 30
+    width: 640
+    height: 480
+  webcam:
+    _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
+    camera_index: 4
     fps: 30
     width: 640
     height: 480
