--- a/lerobot/configs/policy/act_koch_real.yaml
+++ b/lerobot/configs/policy/act_koch_real.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 
 # Use `act_koch_real.yaml` to train on real-world datasets collected on Alexander Koch's robots.
-# Compared to `act.yaml`, it contains 2 cameras (i.e. laptop, phone) instead of 1 camera (i.e. top).
+# Compared to `act.yaml`, it contains 2 cameras (i.e. webcam, phone) instead of 1 camera (i.e. top).
 # Also, `training.eval_freq` is set to -1. This config is used to evaluate checkpoints at a certain frequency of training steps.
 # When it is set to -1, it deactivates evaluation. This is because real-world evaluation is done through our `control_robot.py` script.
 # Look at the documentation in header of `control_robot.py` for more information on how to collect data , train and evaluate a policy.
@@ -17,7 +17,7 @@ seed: 1000
 dataset_repo_id: lerobot/koch_pick_place_lego
 
 override_dataset_stats:
-  observation.images.laptop:
+  observation.images.webcam:
     # stats from imagenet, since we use a pretrained vision model
     mean: [[[0.485]], [[0.456]], [[0.406]]]  # (c,1,1)
     std: [[[0.229]], [[0.224]], [[0.225]]]  # (c,1,1)
@@ -59,7 +59,7 @@ policy:
 
   input_shapes:
     # TODO(rcadene, alexander-soare): add variables for height and width from the dataset/env?
-    observation.images.laptop: [3, 480, 640]
+    observation.images.webcam: [3, 480, 640]
     observation.images.phone: [3, 480, 640]
     observation.state: ["${env.state_dim}"]
   output_shapes:
@@ -67,7 +67,7 @@ policy:
 
   # Normalization / Unnormalization
   input_normalization_modes:
-    observation.images.laptop: mean_std
+    observation.images.webcam: mean_std
     observation.images.phone: mean_std
     observation.state: mean_std
   output_normalization_modes:
