--- a/lerobot/configs/robot/koch.yaml
+++ b/lerobot/configs/robot/koch.yaml
@@ -10,7 +10,7 @@ max_relative_target: null
 leader_arms:
   main:
     _target_: lerobot.common.robot_devices.motors.dynamixel.DynamixelMotorsBus
-    port: /dev/ttyACM0 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
+    port: /dev/ttyACM1 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
     motors:
       # name: (index, model)
       shoulder_pan: [0, "xl330-m077"]
@@ -23,7 +23,7 @@ leader_arms:
 follower_arms:
   main:
     _target_: lerobot.common.robot_devices.motors.dynamixel.DynamixelMotorsBus
-    port: /dev/ttyACM1 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
+    port: /dev/ttyACM0 # TO BE MODIFIED EACH TIME CONNECTED TO A NEW PORT
     motors:
       # name: (index, model)
       shoulder_pan: [0, "xl430-w250"]
@@ -34,21 +34,21 @@ follower_arms:
       gripper: [5, "xl330-m288"]
 
 cameras:
-  # android:
-  #   _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
-  #   camera_index: 
-  #   fps: 30
-  #   width: 640
-  #   height: 480
-  phone:
+  android:
     _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
-    camera_index: 2
+    camera_index: 0
     fps: 30
     width: 640
     height: 480
   webcam:
     _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
-    camera_index: 4
+    camera_index: 3
+    fps: 30
+    width: 640
+    height: 480
+  handcam:
+    _target_: lerobot.common.robot_devices.cameras.opencv.OpenCVCamera
+    camera_index: 5
     fps: 30
     width: 640
     height: 480
