--- a/lerobot/configs/policy/act_koch_real.yaml
+++ b/lerobot/configs/policy/act_koch_real.yaml
@@ -21,7 +21,11 @@ override_dataset_stats:
     # stats from imagenet, since we use a pretrained vision model
     mean: [[[0.485]], [[0.456]], [[0.406]]]  # (c,1,1)
     std: [[[0.229]], [[0.224]], [[0.225]]]  # (c,1,1)
-  observation.images.phone:
+  observation.images.android:
+    # stats from imagenet, since we use a pretrained vision model
+    mean: [[[0.485]], [[0.456]], [[0.406]]]  # (c,1,1)
+    std: [[[0.229]], [[0.224]], [[0.225]]]  # (c,1,1)
+  observation.images.handcam:
     # stats from imagenet, since we use a pretrained vision model
     mean: [[[0.485]], [[0.456]], [[0.406]]]  # (c,1,1)
     std: [[[0.229]], [[0.224]], [[0.225]]]  # (c,1,1)
@@ -60,7 +64,8 @@ policy:
   input_shapes:
     # TODO(rcadene, alexander-soare): add variables for height and width from the dataset/env?
     observation.images.webcam: [3, 480, 640]
-    observation.images.phone: [3, 480, 640]
+    observation.images.android: [3, 480, 640]
+    observation.images.handcam: [3, 480, 640]
     observation.state: ["${env.state_dim}"]
   output_shapes:
     action: ["${env.action_dim}"]
@@ -68,7 +73,8 @@ policy:
   # Normalization / Unnormalization
   input_normalization_modes:
     observation.images.webcam: mean_std
-    observation.images.phone: mean_std
+    observation.images.android: mean_std
+    observation.images.handcam: mean_std
     observation.state: mean_std
   output_normalization_modes:
     action: mean_std
